Fix text vertical align middle on safari

--- a/src/components/header/headerMobile.scss
+++ b/src/components/header/headerMobile.scss
@@ -14,8 +14,8 @@
 	-webkit-transform: translate3d(0, 0, 0);
 	-o-transform: translate3d(0, 0, 0);
 	transform: translate3d(0, 0, 0);
-	-webkit-font-smoothing: antialiased; /* seems to do the same in Safari */
-
+	-webkit-font-smoothing: antialiased;
+	perspective: 1000;
 	.nav-button {
 		position: absolute;
 		top: 5px;
